--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -83,6 +83,70 @@
       "emailButton": "Envoyer un Email",
       "formButton": "Utiliser le Formulaire de Contact",
       "quickInfo": "Email : contact@dariuspizza.fr • Téléphone : (+33) 04.94.64.05.11"
+    },
+    "contactForm": {
+      "emailBanner": {
+        "title": "Envoyez-nous un Email",
+        "description": "Vous préférez envoyer un email directement ? Nous sommes là pour vous aider !",
+        "emailAddress": "info@dariuspizza.com"
+      },
+      "form": {
+        "title": "Envoyez-nous un Message",
+        "description": "Remplissez le formulaire ci-dessous et nous vous répondrons dès que possible.",
+        "fields": {
+          "name": {
+            "label": "Nom Complet",
+            "placeholder": "Votre nom complet"
+          },
+          "email": {
+            "label": "Adresse Email",
+            "placeholder": "votre@email.com"
+          },
+          "phone": {
+            "label": "Numéro de Téléphone",
+            "placeholder": "(123) 456-7890",
+            "description": "Optionnel - pour les demandes urgentes"
+          },
+          "subject": {
+            "label": "Sujet",
+            "placeholder": "De quoi s'agit-il ?"
+          },
+          "inquiryType": {
+            "label": "Type de Demande",
+            "placeholder": "Sélectionnez le type de demande",
+            "options": {
+              "general": "Question Générale",
+              "reservation": "Réservation de Table",
+              "catering": "Demande de Traiteur",
+              "feedback": "Commentaires",
+              "complaint": "Plainte",
+              "compliment": "Compliment",
+              "employment": "Emploi",
+              "other": "Autre"
+            }
+          },
+          "message": {
+            "label": "Message",
+            "placeholder": "Parlez-nous de votre demande...",
+            "description": "Veuillez fournir autant de détails que possible pour nous aider à mieux vous assister."
+          },
+          "preferredContact": {
+            "label": "Méthode de Contact Préférée",
+            "placeholder": "Comment devrions-nous vous contacter ?",
+            "description": "Nous utiliserons cette méthode pour répondre à votre demande.",
+            "options": {
+              "email": "Email",
+              "phone": "Appel Téléphonique",
+              "text": "Message Texte"
+            }
+          }
+        },
+        "submit": {
+          "sending": "Envoi en cours...",
+          "sendMessage": "Envoyer le Message"
+        },
+        "successMessage": "Merci pour votre message ! Nous vous répondrons bientôt."
+      }
     }
   },
   "hero": {
@@ -169,7 +233,7 @@
       "subtitle": "Découvrez l'histoire de notre pizzeria italienne authentique, où la tradition rencontre la passion et chaque pizza raconte une histoire d'héritage familial et d'excellence culinaire."
     },
     "section1": {
-      "title": "De l'Étal du Boucher au Feu de Bois",
+      "title": "De billot de boucher du Boucher au Feu de Bois",
       "intro": "Notre histoire ne commence pas avec la farine, mais avec le couteau. Avant d'être Darius Pizza, notre maison était une adresse incontournable de Cavalaire, fondée en 1936. Dès 1966, elle est devenue la \"Maison Darius\", une boucherie familiale réputée pour son exigence, son savoir-faire et la qualité intransigeante de ses produits.",
       "conclusion": "En 2020, un nouveau chapitre s'est ouvert. La passion pour la gastronomie italienne et les produits d'exception a transformé l'étal en four à bois. La Maison Darius est devenue Darius Pizza.\n\nLe décor a changé, mais l'âme est intacte. Nous avons conservé l'héritage de la boucherie : l'amour du produit frais, le respect du savoir-faire artisanal et une obsession pour le goût. Cette exigence que nous appliquions à nos viandes, nous l'appliquons aujourd'hui à chaque ingrédient qui compose nos pizzas.",
       "image1": {
